Added Lombok support and API tested